# Nvidia-jetson-agx-orin-edge-ai

./: README.md
nvidia-jetson-agx-orin-edge-ai/: API_Endpoints.txt  Build.txt  CMakeLists.txt  Configure.txt  Demo.txt  Dockerfile  Install_Dependencies.txt  Install_Required_Packages.txt  Project_Structure.txt  Testing  main.cpp  requirements.txt
nvidia-jetson-agx-orin-edge-ai/ai/face_detection/: CMakeLists.txt
nvidia-jetson-agx-orin-edge-ai/ai/face_detection/include/: detector.cpp  detector.h  recognizer.cpp  recognizer.h
nvidia-jetson-agx-orin-edge-ai/backend/api/include/: api_server.cpp  api_server.h
nvidia-jetson-agx-orin-edge-ai/configs/: config.yaml  faces.yaml
nvidia-jetson-agx-orin-edge-ai/drivers/camera/: CMakeLists.txt
nvidia-jetson-agx-orin-edge-ai/drivers/camera/include/camera/: camera_driver.h  camera_pipeline.h  camera_utils.h
nvidia-jetson-agx-orin-edge-ai/drivers/camera/src/: camera_driver.cpp  camera_pipeline.cpp  camera_utils.cpp
nvidia-jetson-agx-orin-edge-ai/drivers/gpio/: CMakeLists.txt
nvidia-jetson-agx-orin-edge-ai/drivers/gpio/include/gpio/: gpio_driver.h  gpio_interrupt.h  gpio_pwm.h
nvidia-jetson-agx-orin-edge-ai/drivers/gpio/src/: gpio_driver.cpp  gpio_interrupt.cpp  gpio_pwm.cpp
nvidia-jetson-agx-orin-edge-ai/drivers/i2c/: CMakeLists.txt
nvidia-jetson-agx-orin-edge-ai/drivers/i2c/include/i2c/: i2c_bus.h  i2c_device.h  i2c_driver.h
nvidia-jetson-agx-orin-edge-ai/drivers/i2c/src/: i2c_bus.cpp  i2c_device.cpp  i2c_driver.cpp
nvidia-jetson-agx-orin-edge-ai/drivers/microphone/: CMakeLists.txt
nvidia-jetson-agx-orin-edge-ai/drivers/microphone/include/microphone/: audio_processor.h  microphone_driver.h  voice_detector.h
nvidia-jetson-agx-orin-edge-ai/drivers/microphone/src/: audio_processor.cpp  microphone_driver.cpp  voice_detector.cpp
nvidia-jetson-agx-orin-edge-ai/drivers/spi/: CMakeLists.txt
nvidia-jetson-agx-orin-edge-ai/drivers/spi/include/spi/: spi_bus.h  spi_device.h  spi_driver.h
nvidia-jetson-agx-orin-edge-ai/drivers/spi/src/: spi_bus.cpp  spi_device.cpp  spi_driver.cpp
nvidia-jetson-agx-orin-edge-ai/drivers/storage/: CMakeLists.txt
nvidia-jetson-agx-orin-edge-ai/drivers/storage/include/storage/: file_system.h  storage_driver.h  storage_manager.h
nvidia-jetson-agx-orin-edge-ai/drivers/storage/src/: file_system.cpp  storage_driver.cpp  storage_manager.cpp
nvidia-jetson-agx-orin-edge-ai/drivers/uart/: CMakeLists.txt
nvidia-jetson-agx-orin-edge-ai/drivers/uart/include/uart/: uart_async.h  uart_device.h  uart_driver.h
nvidia-jetson-agx-orin-edge-ai/drivers/uart/src/: uart_async.cpp  uart_device.cpp  uart_driver.cpp
nvidia-jetson-agx-orin-edge-ai/scripts/: benchmark.py  docker-entrypoint.sh  edge_ai.service  enroll_face.py  init_database.sql  setup.sh  test_camera.py
